--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ script:
 - scp -r ./dist root@188.226.148.47:/var/www
 before_install:
 - openssl aes-256-cbc -K $encrypted_627da5e0293a_key -iv $encrypted_627da5e0293a_iv
-  -in tecknopark.enc -out ~\/.ssh/tecknopark -d
+  -in tecknopark.enc -out $HOME/.ssh/tecknopark -d
