--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ script:
 - ssh-add $HOME/.ssh/tecknopark
 - npm run build
 - scp -r ./public/dist root@188.226.148.47:/var/www
+- scp -r ./public/index.html root@188.226.148.47:/var/www
 before_install:
 - openssl aes-256-cbc -K $encrypted_627da5e0293a_key -iv $encrypted_627da5e0293a_iv
   -in tecknopark.enc -out $HOME/.ssh/tecknopark -d
