--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,13 @@ script:
 - scp -r ./public/dist root@188.226.148.47:/var/www
 - scp -r ./public/index.html root@188.226.148.47:/var/www
 - scp -r ./public/images root@188.226.148.47:/var/www
-- scp -r ./public/views/singleplay/animations root@188.226.148.47:/var/www
-- scp -r ./public/views/singleplay/conditions root@188.226.148.47:/var/www
-- scp -r ./public/views/singleplay/entity root@188.226.148.47:/var/www
-- scp -r ./public/views/singleplay/icons root@188.226.148.47:/var/www
-- scp -r ./public/views/singleplay/textures root@188.226.148.47:/var/www
+- scp -r ./public/views/singleplay/animations root@188.226.148.47:/var/www/views/singleplay
+- scp -r ./public/views/singleplay/conditions root@188.226.148.47:/var/www/views/singleplay
+- scp -r ./public/views/singleplay/entity root@188.226.148.47:/var/www/views/singleplay
+- scp -r ./public/views/singleplay/icons root@188.226.148.47:/var/www/views/singleplay
+- scp -r ./public/views/singleplay/textures root@188.226.148.47:/var/www/views/singleplay
+- scp -r ./public/views/singleplay/web.html root@188.226.148.47:/var/www/views/singleplay
+- scp -r ./public/views/singleplay/style.css root@188.226.148.47:/var/www/views/singleplay
 before_install:
 - openssl aes-256-cbc -K $encrypted_627da5e0293a_key -iv $encrypted_627da5e0293a_iv
   -in tecknopark.enc -out $HOME/.ssh/tecknopark -d
